// Copyright (c) Charney Kaye Inc. (https://charneykaye.com) All Rights Reserved.

plugins {
  id 'application'
  id 'distribution'
  id 'jacoco'
  id 'java'
  id 'java-test-fixtures'
}

group = 'com.charneykaye'
version = '1.0'

description = 'Ship Chain+Segment audio as HTTP Live Stream'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

jacocoTestReport {
  reports {
    xml.enabled true
  }
}

apply plugin: 'java'

repositories {
  mavenLocal()
  maven {
    url = 'https://repo.maven.apache.org/maven2'
  }
  maven {
    url = 'https://packages.confluent.io/maven/'
  }
}

dependencies {
  implementation 'ch.qos.logback:logback-classic:1.2.6'
  implementation 'com.amazonaws:aws-java-sdk-secretsmanager:1.12.81'
  implementation 'com.amazonaws:aws-java-sdk:1.12.81'
  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.0'
  implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.0'
  implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.13.0'
  implementation 'com.fasterxml.jackson.module:jackson-module-guice:2.13.0'
  implementation 'com.github.axet:TarsosDSP:2.4-1'
  implementation 'com.github.rholder:snowball-stemmer:1.3.0.581.1'
  implementation 'com.github.trilarion:java-vorbis-support:1.2.1'
  implementation 'com.google.api-client:google-api-client:1.32.1'
  implementation 'com.google.apis:google-api-services-plus:v1-rev20190328-1.30.10'
  implementation 'com.google.guava:guava:31.0.1-jre'
  implementation 'com.google.inject.extensions:guice-assistedinject:5.0.1'
  implementation 'com.google.inject:guice:5.0.1'
  implementation 'com.typesafe:config:1.4.0'
  implementation 'com.zaxxer:HikariCP:3.4.1'
  implementation 'commons-codec:commons-codec:1.10'
  implementation 'commons-io:commons-io:2.6'
  implementation 'io.lindstrom:mpd-parser:0.9'
  implementation 'javax.activation:activation:1.1'
  implementation 'javax.annotation:javax.annotation-api:1.3.1'
  implementation 'javax.cache:cache-api:1.1.1'
  implementation 'javax.validation:validation-api:2.0.1.Final'
  implementation 'javax.ws.rs:javax.ws.rs-api:2.1.1'
  implementation 'me.xdrop:fuzzywuzzy:1.1.9'
  implementation 'net.logstash.logback:logstash-logback-encoder:6.6'
  implementation 'org.apache.httpcomponents:httpclient:4.5.8'
  implementation 'org.eclipse.jetty:jetty-server:9.4.26.v20200117'
  implementation 'org.eclipse.jetty:jetty-servlet:9.4.26.v20200117'
  implementation 'org.glassfish.jersey.containers:jersey-container-grizzly2-http:2.33'
  implementation 'org.glassfish.jersey.core:jersey-server:2.33'
  implementation 'org.glassfish.jersey.inject:jersey-hk2:2.33'
  implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:2.33'
  implementation 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-simple:2.33'
  implementation 'org.jooq:jooq:3.12.3'
  implementation 'org.json:json:20160810'
  implementation 'org.mp4parser:isoparser:1.9.41'
  implementation 'org.mp4parser:muxer:1.9.41'
  implementation 'org.mp4parser:streaming:1.9.41'
  implementation 'org.reflections:reflections:0.9.11'
  implementation 'org.slf4j:log4j-over-slf4j:1.7.13'
  implementation 'org.slf4j:slf4j-api:1.7.5'
  implementation 'org.yaml:snakeyaml:1.18'
  implementation 'software.amazon.awssdk:cloudwatch:2.17.20'
  testFixturesImplementation 'com.google.guava:guava:31.0.1-jre'
  testFixturesImplementation 'com.google.inject.extensions:guice-assistedinject:5.0.1'
  testFixturesImplementation 'com.google.inject:guice:5.0.1'
  testFixturesImplementation 'com.typesafe:config:1.4.0'
  testFixturesImplementation 'org.jooq:jooq:3.12.3'
  testFixturesImplementation 'org.slf4j:slf4j-api:1.7.30'
  testFixturesImplementation 'redis.clients:jedis:2.9.0'
  testImplementation 'com.github.tomakehurst:wiremock-jre8:2.26.3'
  testImplementation 'junit:junit:4.12'
  testImplementation 'org.assertj:assertj-core:3.8.0'
  testImplementation 'org.eclipse.jetty:jetty-client:9.4.26.v20200117'
  testImplementation 'org.hamcrest:hamcrest-library:1.3'
  testImplementation 'org.mockito:mockito-core:3.2.4'
}

jar {
  manifest {
    attributes 'Main-Class': 'com.charneykaye.ship.Main'
  }
}

applicationDefaultJvmArgs = [
  "-Xmx3500m"
]

application {
  mainClassName = 'com.charneykaye.ship.Main'
}

group = 'com.charneykaye'
description = 'ship'
version = '1.0'

java {
  sourceCompatibility = JavaVersion.VERSION_16
  targetCompatibility = JavaVersion.VERSION_16
}

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

jacocoTestReport {
  reports {
    xml.enabled true
  }
}
